[gd_scene load_steps=5 format=3 uid="uid://clgqrb3pd5f0y"]

[ext_resource type="Script" path="res://levels/level.gd" id="1_3ep40"]
[ext_resource type="PackedScene" uid="uid://bspy4rvse1yv8" path="res://player/player.tscn" id="1_mnykd"]
[ext_resource type="AudioStream" uid="uid://34ier75hsy1u" path="res://assets/audio/eerie-prelude-23078.ogg" id="3_13cds"]
[ext_resource type="PackedScene" uid="uid://pr4dc0k8fu4b" path="res://scale.tscn" id="4_fvliv"]

[node name="Level" type="Node2D" groups=["level_manager"]]
script = ExtResource("1_3ep40")

[node name="Entities" type="Node" parent="."]

[node name="Enemies" type="Node" parent="Entities"]

[node name="Player" parent="Entities" instance=ExtResource("1_mnykd")]
position = Vector2(500, 0)

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_13cds")
volume_db = 5.0
autoplay = true

[node name="Scale" parent="." instance=ExtResource("4_fvliv")]

[connection signal="chunk_changed" from="Entities/Player" to="." method="_on_player_chunk_changed"]
[connection signal="died" from="Entities/Player" to="." method="_on_player_died"]
